{{top/mid/bot}}, {{ttbc}} <port#867911>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -27,7 +27,6 @@ From ''Oporto'', Portugal <!-- The drink is - how about the other senses?  The s
 
 '''place at which ships dock'''
 {{top}}
-<!--languages from A to I go here-->
 *Dutch: [[haven#Dutch|haven]] ''f''
 *Estonian: [[sadam]]
 *Finnish: [[satama]]
@@ -37,14 +36,12 @@ From ''Oporto'', Portugal <!-- The drink is - how about the other senses?  The s
 *[[Ido]]: [[portuo]]
 *Italian: [[porto]] {{m}}
 {{mid}}
-<!--languages from J to Z go here-->
 *Portuguese: porto {{m}}
 *Spanish: [[puerto]] {{m}}
 {{bottom}}
 
 '''town or city containing such a place'''
 {{top}}
-<!--languages from A to I go here-->
 *Finnish: [[satama]], [[satamakaupunki]]
 *French: port {{m}}
 *German: [[Hafenstadt]] ''f''
@@ -58,14 +55,12 @@ From ''Oporto'', Portugal <!-- The drink is - how about the other senses?  The s
 
 '''type of fortified wine'''
 {{top}}
-<!--languages from A to I go here-->
 *Finnish: [[portviini]]
 *French: [[vin de Porto]] {{m}}
 *German: [[Portwein]] {{m}}
 *Greek: [[πορτό]] ''n'', [[οίνος Πορτογαλίας]] {{m}}
 *Italian: [[porto]] {{m}}
 {{mid}}
-<!--languages from J to Z go here-->
 *Portuguese: [[vinho do Porto]] {{m}}
 *Spanish: [[vino de Oporto]] {{m}}
 {{bottom}}
@@ -75,18 +70,14 @@ From ''Oporto'', Portugal <!-- The drink is - how about the other senses?  The s
 
 '''computing: logical or physical construct in and from which data are transferred'''
 {{top}}
-<!--languages from A to I go here-->
 *Finnish: [[portti]]
 {{mid}}
-<!--languages from J to Z go here-->
 {{bottom}}
 
 '''computing: act of adapting a program so that it works on a different platform'''
 {{top}}
-<!--languages from A to I go here-->
 *Finnish: [[sovitus]], [[sovittaminen]], [[porttaaminen]] (''informal''), [[porttaus]] (''informal'')
 {{mid}}
-<!--languages from J to Z go here-->
 {{bottom}}
 
 '''entryway, portal'''<br>
@@ -94,10 +85,8 @@ From ''Oporto'', Portugal <!-- The drink is - how about the other senses?  The s
 
 '''opening where a connection is made'''
 {{top}}
-<!--languages from A to I go here-->
 *Finnish: [[liitin]], [[portti]] (''computers'')
 {{mid}}
-<!--languages from J to Z go here-->
 {{bottom}}
 
 '''porthole'''<br>
@@ -106,15 +95,15 @@ From ''Oporto'', Portugal <!-- The drink is - how about the other senses?  The s
 =====Translations to be checked=====
 {{checktrans}}
 
-*Dutch: port {{m}} (2), [[schooltas]] ''f'' (3)
+*{{ttbc|Dutch}}: port {{m}} (2), [[schooltas]] ''f'' (3)
 *Greek:
 **(4) [[σύνδεση εισόδου]] ''f'', [[σύνδεση εξόδου]] ''f''
-*Indonesian: [[labuh|pelabuhan]] (1)
-*Japanese: [[港]] ([[みなと]], minato) (1)
-*Korean: [[항구]] [港口] (hanggu)
-*Latin: [[portus]] {{m}} (1)
-*Malay: [[bandar]] (2)
-*Swedish: [[hamn]] ''c'' (1), [[port#Swedish|port]] ''c'' (4)
+*{{ttbc|Indonesian}}: [[labuh|pelabuhan]] (1)
+*{{ttbc|Japanese}}: [[港]] ([[みなと]], minato) (1)
+*{{ttbc|Korean}}: [[항구]] [港口] (hanggu)
+*{{ttbc|Latin}}: [[portus]] {{m}} (1)
+*{{ttbc|Malay}}: [[bandar]] (2)
+*{{ttbc|Swedish}}: [[hamn]] ''c'' (1), [[port#Swedish|port]] ''c'' (4)
 
 ===Transitive verb===
 '''port''' (porting, ported)
