--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -1,4 +1,5 @@
 ==English==
+
 ===Etymology===
 :Medieval Latin ''[[secretarius]]'', one entrusted with [[secret]]s.
 ===Pronunciation===
@@ -20,7 +21,7 @@
 *German: [[Sekretär]]
 *Interlingua: [[secretaria]] ''f''
 {{mid}}
-*{{ku}}: [[katib]], [[sekreter]]
+*[[Kurdish]]: [[katib]], [[sekreter]]
 *Portuguese: [[secretária]] ''f''
 *Tok Pisin: [[sekreteri]]
 {{bottom}}
@@ -31,7 +32,7 @@
 *French: [[secrétaire]]
 *Interlingua: [[secretaria]] ''f''
 {{mid}}
-*{{ku}}: [[sekreter]]
+*[[Kurdish]]: [[sekreter]]
 *Portuguese: [[secretária]] ''f''
 *Tok Pisin: [[sekreteri]]
 {{bottom}}
@@ -41,7 +42,7 @@
 *French: [[secrétaire]]
 *Interlingua: [[bureau]]
 {{mid}}
-*{{ku}}: [[sekreter]]
+*[[Kurdish]]: [[sekreter]]
 *Portuguese: [[escrivaninha]] ''f''
 {{bottom}}
 
@@ -54,11 +55,11 @@
 
 =====Translations to be categorized=====
 {{checktrans}}
-*Indonesian: [[sekretaris]]
-*Interlingua: [[secretario]] ''m'', [[scriptorio]]
-*Italian: [[segretario]] ''m'', [[segretaria]] ''f''
-*Portuguese: [[secretário]] ''m''
-*Japanese: [[秘書]] (ひしょ, hisho), [[大臣]] (だいじん, daijin; Secretary of State)
+*{{ttbc|Indonesian}}: [[sekretaris]]
+*{{ttbc|Interlingua}}: [[secretario]] ''m'', [[scriptorio]]
+*{{ttbc|Italian}}: [[segretario]] ''m'', [[segretaria]] ''f''
+*{{ttbc|Portuguese}}: [[secretário]] ''m''
+*{{ttbc|Japanese}}: [[秘書]] (ひしょ, hisho), [[大臣]] (だいじん, daijin; Secretary of State)
 
 ====Derived terms====
 *[[secretary bird]]
