--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -53,10 +53,10 @@
 
 =====Translations to be checked=====
 {{checktrans}}
-*Slovak: (to ''suck'' a sweet) [[cmúľať]] ''inf.'', (to ''suck in'' one’s breath) [[vtiahnuť]] ''inf.''
-*Spanish:  [[chupar]]
-*Polish: [[ssać]]
-*Norwegian: [[suge]]
+*{{ttbc|Slovak}}: (to ''suck'' a sweet) [[cmúľať]] ''inf.'', (to ''suck in'' one’s breath) [[vtiahnuť]] ''inf.''
+*{{ttbc|Spanish}}:  [[chupar]]
+*{{ttbc|Polish}}: [[ssać]]
+*{{ttbc|Norwegian}}: [[suge]]
 *Swedish [[suga]]
 
 [[fr:suck]]
