robot  Adding: zh Modifying: io <stab#870684>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -61,8 +61,9 @@ Middle English
 [[Category:English intransitive verbs]]   
 [[Category:English nouns]]   
 [[Category:English transitive verbs]]   
-[[Category:English verbs]] 
+[[Category:English verbs]]
 
 [[fr:stab]]
-[[io:Stab]]
+[[io:stab]]
 [[pl:stab]]
+[[zh:stab]]
