--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -26,6 +26,7 @@
 *Spanish: [[rama]] {{f}}, [[sucursal]] {{f}} (3)
 *Swahili: [[tawi]]
 *Swedish: [[bransch]] (3)
+*[[Telugu]]: [[కొమ్మ]] (1), [[శాఖ]] (1, 3, 4)
 *Turkish: [[dal]] (1, 2, 4), [[şube]] (3)
 *Vietnamese: [[nhánh]] (1, 3, 4)
 {{bottom}}
