--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -36,6 +36,7 @@
 *'''Slovene''': [[opeka]] ''f'' (1,2)
 *'''Spanish''': [[ladrillo]]
 *'''Swahili''': [[tofali]], [[matofali]] ''pl'' (1,2) ''(noun 5/6)''
+*[[Telugu]]: [[ఇటుక]] (1, 2)
 *'''Ukrainian''': [[цеглина]] (cehl'''y'''na) {{f}} (1), [[цегла]] (c'''e'''hla) {{f}} (2)
 *'''[[w:Vietnamese language|Vietnamese]]''': [[gạch]]
 {{bottom}}
