/* Noun */ +curling, reshuffle impotance of defns <port#871341>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -9,13 +9,14 @@ From ''Oporto'', Portugal <!-- The drink is - how about the other senses?  The s
 #A place on the coast at which ships dock and cargo and/or passengers are loaded and unloaded.
 #A town or city containing such a place.
 #A type of [[fortified]] wine traditionally made in [[Portugal]].
-#(''Queensland'') {{AU}} A schoolbag or suitcase. ''Probale abbreviation of [[portmanteau]]
-# {{computing}} A logical or physical construct in and from which data are transferred.
-# {{computing}} The act of adapting a [[program]] so that it works on a different [[platform]] from the one on which it originally worked.
-# ''(computing)'' A female connector of an electronic device, into which a cable's male connector can be inserted.
 #An entryway or [[portal]].
 #An opening where a connection (such as a pipe) is made.
 #A [[porthole]].
+# {{computing}} A logical or physical construct in and from which data are transferred.
+# {{computing}} The act of adapting a [[program]] so that it works on a different [[platform]] from the one on which it originally worked.
+# ''(computing)'' A female connector of an electronic device, into which a cable's male connector can be inserted.
+# {{curling}} A space between two [[stone]]s wide enough for a delivered stone to pass through
+#(''Queensland'') {{AU}} A schoolbag or suitcase. ''Probale abbreviation of [[portmanteau]]
 
 ====Synonyms====
 *(''place where ships dock''): [[harbour]], [[haven]]
