robot  Adding: fr, zh Modifying: et, io <substance#871347>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -63,7 +63,10 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 *[[substantive]]
 *[[understand]]
 [[Category:1000 English basic words]]
-[[et:Substance]]
-[[io:Substance]]
+
+[[et:substance]]
+[[fr:substance]]
+[[io:substance]]
 [[it:substance]]
 [[fi:substance]]
+[[zh:substance]]
