--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -51,7 +51,7 @@ Old English [[cuman]].
 *Manchu: [[jimbi]]
 *Mongolian: [[ирэх]] (irekh)
 *Old English: [[cuman]]
-*Persian: {{FAchar|[[آمدن|آمَدَن]]}} (āmædæn)
+*Persian: {{FAchar|[[امدن|آمَدَن]]}} (āmædæn)
 *Portuguese: [[vir]]
 *[[Rohingya]]: [[ai]]
 *Russian: [[приходить]] / [[прийти]] (prikhodít’, prijtí)
