--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -29,7 +29,7 @@ Old English [[cuman]].
 
 ====Translations====
 {{top}}
-*Arabic: [[جاء]] (já:’a)
+*Arabic: {{ARchar|[[جاء]]}} (já:’a)
 *Bavarian: [[kemma]]
 *Chinese: (''simplified'') [[来]] / (''traditional'') [[來]] (lái)
 *Dutch: [[komen]]
