--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -42,13 +42,15 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 *Spanish: [[hermoso]] ''m'', [[hermosa]] ''f'', ''[[bello]]'', ''[[lindo]]'', ''[[chico]]''
 *Slovak: [[krásny]] ''m'', krásna ''f'', krásne ''n''
 *Swedish: [[vacker]]
-*Vietnamese: [[đẹp]], [[đẹp đẽ]]
+*[[Telugu]]: [[అందమైన]]
 *Turkish: [[güzel]]
+*Vietnamese: [[đẹp]], [[đẹp đẽ]]
 {{bottom}}
 
 '''pleasant, clear weather'''
 {{top}}
 {{mid}}
+*[[Telugu]]: [[ఆహ్లాదకరమైన]]
 {{bottom}}
 
 ====Synonyms====
