/* Derived terms */ ++ <fight#873619>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -17,7 +17,12 @@
 # A [[conflict]] of two [[will]]s.
 
 ====Derived terms====
+{{top}}
 *[[cockfight]]
+*[[dogfight]]
+{{mid}}
+*[[fighting cock]]
+{{bottom}}
 
 ====Translations====
 {{top}}
