/* Translations */ Czech <United States of America#873723>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -18,6 +18,7 @@
 *Bulgarian: [[Съединени Американски Щати]] (Sǎedineni amerikanski štati), [[САЩ]]
 *[[Catalan]]: [[Estats Units d'Amèrica]] ''m pl''
 *Chinese: [[美利坚合众国]]/[[美利堅合衆國]] (Měilìjiān Hézhòngguó); [[美国]]/[[美國]] (Měiguó)
+*Czech [[Spojené státy americké]], [[Spojené státy]]
 *Danish: [[Amerikas Forenede Stater]], [[Forenede Stater]]
 *Dutch: [[Verenigde Staten van Amerika]] ''f pl'', [[Verenigde Staten]], [[VS]
 *[[Esperanto]]: [[Usono]], [[Unuiĝintaj Ŝtatoj de Ameriko]]
