--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -13,21 +13,30 @@
 ====Translations====
 {{top}}
 *Arabic: {{ARchar|[[الولايات المتحدة الامريكية]]}} (al-wilayá:t al-mutáħedat al-’amrikíyya), {{ARchar|[[الولايات المتحدة]]}} (al-wilayá:t al-mutáħeda) ''f pl''
+*Armenian: [[Ամէրիկայի Միացյալ Նահանգնէր]]
+*Azeri: [[Amerika Birləşmiş Ştatları]]
+*Bengali: {{BNchar|[[মার্কিন যুক্তরাষ্ট্র]]
 *Bosnian: [[Sjedinjene Američke Države]] ''f pl'', [[Amerika]] ''f'', [[SAD]]
 *[[Breton]]: [[Stadoù-Unanet Amerika]] ''f pl'', [[SUA]]
 *Bulgarian: [[Съединени Американски Щати]] (Sǎedineni amerikanski štati), [[САЩ]]
 *[[Catalan]]: [[Estats Units d'Amèrica]] ''m pl''
 *Chinese: [[美利坚合众国]]/[[美利堅合衆國]] (Měilìjiān Hézhòngguó); [[美国]]/[[美國]] (Měiguó)
+*Croatian: [[Sjedinjene Američke Države]] {{f}} {{p}}
 *Czech [[Spojené státy americké]], [[Spojené státy]]
 *Danish: [[Amerikas Forenede Stater]], [[Forenede Stater]]
 *Dutch: [[Verenigde Staten van Amerika]] ''f pl'', [[Verenigde Staten]], [[VS]
 *[[Esperanto]]: [[Usono]], [[Unuiĝintaj Ŝtatoj de Ameriko]]
+*Estonian: [[Ameerika Ühendriigid]]
 *Finnish: [[Amerikan Yhdysvallat]], ''short:'' [[Yhdysvallat]], [[USA]]
 *French: [[États-Unis d'Amérique]] ''m pl'', (''short form'') [[États-Unis]] ''m pl'', [[É-U]] (''abbr.'')
 *[[Frisian]]: [[Feriene Steaten fan Amearika]]
+*Georgian: [[ამერიკის შეერთებული შტატები]]
 *German: [[Vereinigte Staaten von Amerika]] ''m pl'', (''short form'') [[Vereinigte Staaten]] ''m pl'', [[USA]] ''f''
 *Greek: [[Ηνωμένες Πολιτείες της Αμερικής]] ''f pl'', [[Ηνωμένες Πολιτείες Αμερικής]] ''f pl'', (''short form'') [[Ηνωμένες Πολιτείες]] ''f pl'', [[ΗΠΑ]] (''abbr.'')
+*Gujarati: [[સંયુકત રાજ્ય અમેરિકા]]
+*Hawaiian: [['Amelika Huipū'ia]]
 *Hebrew: [[ארצות הברית של אמריקה]] (Artsot ha-Brit shel America),  ''short:'' [[ארצות הברית]] (Artsot ha-Brit), ''abbr.:'' [[ארה"ב]] (ARH-B)
+*Hindi: [[संयुक्त राज्य अमरीका]] (Sa.nyukta Rājya Amrīkā), [[संयुक्त राष्ट्र अमरीका]] (Sa.nyukta Raštra Amrīkā)
 *Hungarian: [[Amerikai Egyesült Államok]]
 *Indonesia: [[Amerika Serikat]]
 *[[Interlingua]]: [[Statos Unite de America]]
@@ -35,13 +44,19 @@
 *Italian: [[Stati Uniti d'America]] ''m pl'', (''short form'') [[Stati Uniti]] ''m pl'', [[SUA]] (''abbr.'')
 {{mid}}
 *Japanese: [[米国]] (べいこく, Béikoku), [[アメリカ合衆国]] (アメリカがっしゅうこく, Ameriká Gasshūkoku)
+*Kazakh: [[Америка Құрама Штаттары]]
+*Khmer: [[សហរដ្ឋអាេមរិក]]
+*Kirghiz: [[Америка Кошмо Штаттары]]
 *Korean: [[미국]] (Mi-guk), [[아메리카 합중국]] (Amerika Hapjungguk), South Korean: [[美國]], North Korean: [[米國]] (Mi-guk)
 *Latin: [[Respublicae Unitae Americae]], [[Status Uniti Americae]], [[Civitates Unitae Americae]]
 *Latvian: [[Amerikas Savienotās Valstis]], [[ASV]]
 *Malay: [[Amerika Syarikat]]
+*Nepali: [[संयुक्त राज्य अमेरिका]]
 *Norwegian: [[Amerikas forente stater]], [[De forente stater]]
+*Persian: {{FAchar|[[ایالات متحده امریکا|ایالات متحده آمریکا]]}}
 *Polish: [[Stany Zjednoczone Ameryki]] ''m pl'', [[Stany Zjednoczone Ameryki Północnej]], ''short:'' [[Stany Zjednoczone]], ''abbr:'' [[SZA]], ''colloquial:'' [[Stany]], [[USA]]
 *Portuguese: [[Estados Unidos da América]] ''m pl'', ''short:'' [[Estados Unidos]] ''m pl'', ''abbr:'' [[EUA]] ''m pl''
+*Punjabi: [[ਸੰਯੁਕਤ ਰਾਜ ਅਮਰੀਕਾ]]
 *Romanian: [[Statele Unite ale Americii]], ''short:'' [[Statele Unite]], [[SUA]]
 *Russian: [[Соединённые Штаты Америки]] (Sojedinjónnyje Štáty Amériki) ''m pl'', [[США]] (''abbr.'')
 *Serbian:
@@ -51,8 +66,11 @@
 *Slovenian: [[Združene države Amerike]] ''f pl'', [[Združene države]] ''f pl'' (short form), [[ZDA]] (''abbr.'')
 *Spanish: [[Estados Unidos de América]] ''m sg'', (''short form'') Estados Unidos ''m sg'', ''abbr:'' [[EE. UU.]] ''m sg'', [[EEUU]] ''m sg''
 *Swedish: [[Amerikas förenade stater]], [[Förenta staterna]]
+*Tajik: [[Иёлоти Муттаҳидаи Амриқо]]
 *Turkish: [[Amerika Birleşik Devletleri]], [[ABD]] (''abbr.'')
 *Ukrainian: [[Сполучені Штати Америки]] (Spolučeni Štáti Amériki) ''m pl'', [[США]] (''abbr.'')
+*Uyghur: {{FAchar|[[ﺋﺎﻣﯧﺮﯨﻜﺎ ﻗﻮﺷﻤﺎ ﺷﺘﺎﺗﻠﯩﺮﻯ]]}}
+*Uzbek: [[Amerika Qo'shma Shtatlari]]
 *Vietnamese: [[Hoa Kỳ]], [[Nước Mỹ]], [[Mỹ Quốc]] (''short forms''); [[Hợp Chủng Quốc Hoa Kỳ]] (''long form''); [[HK#Vietnamese|HK]] (''abbr.''), [[Mỹ]] (''abbr.'')
 {{bottom}}
 
