/* Translations */  Latvian <butter#874047>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -33,6 +33,7 @@
 *Italian: [[burro]] {{m}}
 *Japanese: [[バター]] (batā)
 *Korean: [[뻐터]] (beoteo)
+*Latvian: [[sviests]] {{m}}
 *Lithuanian: [[sviestas]] {{m}}
 *Mongolian: {{RUchar|[[цөцгийн тос]]}} (tsötsgiin tos)
 *Polish: [[masło]] {{n}}
