--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -30,7 +30,7 @@
 *'''Italian''': [[mattone]]
 {{mid}}
 *'''Japanese''': [[煉瓦]] ([[レンガ]], renga)
-*'''Latvian''': [[ķieģelis]] {{m}) (1,2)
+*'''Latvian''': [[ķieģelis]] {{m}} (1,2)
 *'''Portuguese''': [[tijolo]]
 *'''Romanian''':[[cărămidă]] ''f''
 *'''Russian''': [[кирпич]] (kirpich)
