--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -28,6 +28,7 @@
 {{mid}}
 *Swedish: [[kurva]] ''c''
 *Russian: [[изгиб]] ''m'', [[кривая]] ''f'', [[поворот]] ''m''
+*{{te}}: [[వంపు]] (vampu)
 {{bottom}}
 
 '''geometry: one-dimensional figure'''
@@ -50,6 +51,7 @@
 {{mid}}
 *Swedish: [[kurva]] ''c'' (''usually plural''), [[figur]] ''c'' (''usually singular'')
 *Russian: [[изгибы]] ''pl.''
+*{{te}}: [[వంపులు]] (vampulu), [[వొంపులు]] (vompulu)
 {{bottom}}
 
 ===Transitive verb===
