--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -54,6 +54,7 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 *Esperanto: [[pruno]]
 *Finnish: [[luumu]]
 *French: [[prune]] {{f}}
+*German: [[Pflaume]] {{f}}, [[Zwetschge]] {{f}}
 *Greek: [[δαμάσκηνο]] [ðaˈmasciˌno̞] {{n}}
 *Hindi: [[आलूचा]] (ālūćā), [[आलूबुखारा]] (ālūbukhārā)
 {{mid}}
@@ -105,7 +106,6 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 *{{ttbc|Estonian}}: [[ploom]]
 *{{ttbc|Frisian}}: [[prom]] (2), [[rezyn]] (5)
 *{{ttbc|Galician}}: [[ameixeira]] {{f}} (1), [[ameixa]] {{f}} (2)
-*{{ttbc|German}}: [[Pflaume]] {{f}}
 *{{ttbc|Middle High German|German, Middle High}}: [[pflūme]], [[pfrūme]]
 *{{ttbc|Old High German|German, Old High}}: [[pfrūma]]
 *{{ttbc|Greek}}: [[δαμασκηνιά]] (dhamaskiniá) {{f}} (1), [[δαμάσκηνο]] (dhamáskino) {{n}} (2)
