--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -27,8 +27,7 @@ From Latin [[mandatum]] or [[mandatus]], from [[mandare]] "to put in one's hands
 {{sv-noun|gender=Neuter|mandat|mandatet|mandat|mandaten|mandats|mandatets|mandats|mandatens}}
 
 [[Category:Swedish nouns]]
-[[de:Mandat]]
-[[et:Mandat]]
+
+[[et:mandat]]
 [[fr:mandat]]
-[[io:Mandat]]
-[[it:Mandat]]
+[[io:mandat]]
