--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -1,1 +1,74 @@
-dfgdfsg
+==English==
+
+===Noun===
+{{en-noun-reg}}
+
+#an [[outer]] [[garment]] [[cover]]ing the upper [[torso]] and [[arms]].
+#a [[covering]] of [[material]], such as [[paint]]
+
+====Translations====
+'''an outer garment covering the upper torso and arms'''
+{{top}}
+*Dutch: [[mantel]] ''m'', [[jas]] ''m''
+*Finnish: [[takki]]
+*French: [[manteau]] ''m''
+*German: [[Mantel]] ''m''
+*Indonesian: [[mantel]]
+*Italian: [[mantello]] ''m''
+{{mid}}
+*Slovene: [[plašč]] ''m''
+*Spanish: [[abrigo]] ''m'', [[saco]] ''m'', [[casaca]] ''f''
+{{bottom}}
+
+'''a covering of material, such as paint'''
+{{top}}
+*Dutch: [[laag]] ''f''
+*Finnish: [[päällys]]
+*French: [[couche]] ''f''
+*German: [[Beschichtung]] ''f''
+*Italian: [[rivestimento]] ''m''
+{{mid}}
+*Spanish: [[cubierta]] ''f''
+{{bottom}}
+
+=====Translations to be checked=====
+{{checktrans}}
+*{{ttbc|Irish}}: [[cóta]] ''m''
+*{{ttbc|Japanese}}: [[コート]] (kōto)
+*{{ttbc|Portuguese}}: [[casaco]] ''m'', [[manta]] ''f''
+*{{ttbc|Romanian}}: [[haină]] ''f'', [[manta]] ''f''
+
+====Derived terms====
+*[[coat of arms]]
+*[[greatcoat]]
+
+===Verb===
+'''to coat'''
+
+#To cover with a coat (2) of some material
+#:''One can buy '''coated''' frying pans, which are much easier to wash up than normal ones.''
+#To cover as a coat (2).
+
+====Translations====
+'''To cover with a coat of some material'''
+{{top}}
+*Dutch: [[coaten]]
+*French: [[couvrir]]
+*German: [[beschichten]]
+*Italian: [[rivestire]]
+{{mid}}
+*Spanish: [[cubrir]]
+{{bottom}}
+
+
+'''To cover as a coat'''
+{{top}}
+*Finnish: [[peittää]], [[päällystää]]
+{{mid}}
+{{bottom}}
+
+[[Category:1000 English basic words]]
+
+[[fr:coat]]
+[[io:Coat]]
+[[it:coat]]
