/* Etymology */ Etymon is OE, not OHG. <flesh#882995>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-:from Old High German "''fleisk''". 
+:From [[Old_English_language|Old English]] ''{{Unicode|flǣsc}}''; cf. [[Old_High_German|Old High German]] "''fleisk''".
 
 ===Noun===
 '''flesh''' (plural: '''fleshes''')
