--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -54,9 +54,8 @@ Strong's Number:   776
          5. end(s) of the earth 
    5. (almost wholly late in usage)
          1. lands, countries 1e 
-   6. often in contrast to Canaan 
+   6. often in contrast to Canaan
 
-
+[[ar:ארץ]]
 [[fr:ארץ]]
-
 [[hu:ארץ]]
