robot  Adding: pt, ta, zh Modifying: el, io <branch#884679>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -54,9 +54,13 @@
 *[[branch out]]
 
 [[Category:1000 English basic words]]
-[[el:Branch]]
+
+[[el:branch]]
 [[fr:branch]]
-[[io:Branch]]
+[[io:branch]]
 [[it:branch]]
 [[hu:branch]]
+[[pt:branch]]
 [[fi:branch]]
+[[ta:branch]]
+[[zh:branch]]
