robot  Adding: ar, hu, ta, zh Modifying: el, io, pt, ru <bridge#884787>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -139,11 +139,15 @@
 [[Category:1000 English basic words]]
 [[Category:Card games]]
 
-[[el:Bridge]]
+[[ar:bridge]]
+[[el:bridge]]
 [[fr:bridge]]
-[[io:Bridge]]
+[[io:bridge]]
 [[it:bridge]]
+[[hu:bridge]]
 [[pl:bridge]]
-[[pt:Bridge]]
-[[ru:Bridge]]
+[[pt:bridge]]
+[[ru:bridge]]
 [[fi:bridge]]
+[[ta:bridge]]
+[[zh:bridge]]
