/* Noun */ You really have to stretch to think of a countable sense of this. <flesh#884866>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -5,7 +5,7 @@
 :From [[Old_English_language|Old English]] ''{{Unicode|flǣsc}}''; cf. [[Old_High_German|Old High German]] "''fleisk''".
 
 ===Noun===
-'''flesh''' (plural: '''fleshes''')
+'''flesh''' ([[Mass_noun|''mass noun'']])
 
 #the soft [[tissue]] of the [[body]], especially [[muscle]] and [[fat]].
 #[[animal]] tissue, especially animal tissue used as food.
