--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -66,12 +66,15 @@
 [[Category:sv:Countries]]
 '''Israel'''
 #Israel
+
 [[bg:Israel]]
 [[de:Israel]]
 [[et:Israel]]
 [[el:Israel]]
 [[es:Israel]]
+[[fr:Israel]]
 [[hi:Israel]]
+[[hu:Israel]]
 [[pl:Israel]]
 [[fi:Israel]]
 [[sv:Israel]]
