robot  Adding: ko, ta, zh Modifying: gl, io, pt <cut#886495>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -100,9 +100,12 @@
 
 [[es:cut]]
 [[fr:cut]]
-[[gl:Cut]]
-[[io:Cut]]
+[[gl:cut]]
+[[ko:cut]]
+[[io:cut]]
 [[it:cut]]
 [[hu:cut]]
-[[pt:Cut]]
+[[pt:cut]]
 [[fi:cut]]
+[[ta:cut]]
+[[zh:cut]]
