--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -79,8 +79,8 @@ In many cases the possessive pronoun ''zijn'' is avoided when refering to inanim
 
 [[es:het]]
 [[fr:het]]
-[[la:Het]]
+[[la:het]]
 [[nl:het]]
-[[no:Het]]
-[[ru:Het]]
+[[no:het]]
+[[ru:het]]
 [[fi:het]]
