robot  Adding: ta Modifying: ca, no, zh <pen#891474>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -102,14 +102,15 @@
 
 [[Category:1000 English basic words]]
 
-[[ca:Pen]]
+[[ca:pen]]
 [[de:pen]]
 [[es:pen]]
 [[fr:pen]]
 [[it:pen]]
 [[hu:pen]]
 [[nl:pen]]
-[[no:Pen]]
+[[no:pen]]
 [[pl:pen]]
 [[fi:pen]]
-[[zh:Pen]]
+[[ta:pen]]
+[[zh:pen]]
