robot  Adding: zh Modifying: da, et, gl, io <blond#892895>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -87,12 +87,13 @@
 |}
 
 [[cs:blond]]
-[[da:Blond]]
+[[da:blond]]
 [[de:blond]]
-[[et:Blond]]
+[[et:blond]]
 [[fr:blond]]
-[[gl:Blond]]
-[[io:Blond]]
+[[gl:blond]]
+[[io:blond]]
 [[it:blond]]
 [[nl:blond]]
 [[pl:blond]]
+[[zh:blond]]
