--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -189,7 +189,7 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 [[Category:Fruits]]
 
 [[fr:plum]]
-[[io:Plum]]
+[[io:plum]]
 [[it:plum]]
 [[hu:plum]]
 [[ja:plum]]
