--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -64,7 +64,7 @@
 *Spanish: [[puente]] {{m}}
 *Swedish: [[bro#Swedish|bro]] {{c}}
 *Tamazight: [[ⵜⵉⵍⴻⴳⴳⵡⵉⵜ]] (tileggwit) {{f}}
-*[[Telugu]]: [[వారధి]], [[వంతెన]]
+*[[Telugu]]: [[వారధి]], [[వంతెన]], [[సేతువు]]
 *Turkish: [[köprü]]
 *{{vi}}: [[cầu]]
 {{bottom}}
