check fi <curve#897215>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -23,6 +23,7 @@
 *Catalan: revolt, ''m''
 *Dutch: [[curve]] ''f'', [[kromming]] ''f'', [[bocht]] ''m'' (''road'')
 *Esperanto: [[kurbo]], [[kurbiĝo]], [[sinuo]], [[ĝirejo]], [[vojturno]] (''road'')
+*Finnish: [[kaarre]]
 *French: [[courbe]] ''f''
 *Italian: [[curva]] ''f''
 {{mid}}
@@ -36,6 +37,7 @@
 *Catalan: corba, f
 *Dutch: [[curve]] ''f'', [[kromme]] ''f''
 *Esperanto: [[kurbo]]
+*Finnish: [[kaari]], [[käyrä]]
 *French: [[courbe]] ''f''
 {{mid}}
 *Slovene: [[krivulja]] ''f''
@@ -68,6 +70,7 @@
 '''bend, crook'''
 {{top}}
 *Dutch: [[krommen]], [[plooien]] (''pipe''), [[buigen]]
+*Finnish: [[käyristää]]
 {{mid}}
 *Swedish: [[böja]], [[kröka]]
 *Russian: [[изгибать]], [[гнуть]]
@@ -89,6 +92,7 @@
 '''bend or turn gradually from a given direction'''
 {{top}}
 *Dutch: [[afbuigen]]
+*Finnish: [[kaartaa]]
 {{mid}}
 *Swedish: [[böja]] (sig)
 *Russian: [[изгибаться]], [[гнуться]]
@@ -98,7 +102,6 @@
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
 {{checktrans}}
 
-*{{ttbc|Finnish}}: [[käyrä]]
 *{{ttbc|Indonesian}}: [[kurva]]
 *{{ttbc|Irish}}: [[cuar]]
 *{{ttbc|Japanese}}: [[曲線]] ([[きょくせん]], kyokusen)
