robot  Adding: ko Modifying: el, et, io <chose#897773>

--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -30,8 +30,10 @@
 
 ====Synonyms====
 *[[truc]] ''m''
-[[et:Chose]]
-[[el:Chose]]
+
+[[et:chose]]
+[[el:chose]]
 [[fr:chose]]
-[[io:Chose]]
+[[ko:chose]]
+[[io:chose]]
 [[it:chose]]
