--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -15,4 +15,7 @@
 *Japanese:[[掛ける]] ([[かける]], kakeru), [[ぶら下がる]] ([[ぶらさがる]], burasagaru), [[ぶら下げる]] ([[ぶらさげる]], burasageru)
 {{bottom}}
 
+[[et:cling]]
+[[ko:cling]]
 [[pl:cling]]
+[[zh:cling]]
