--- a/en/f/fit.6886.wikitext
+++ b/en/f/fit.6886.wikitext
@@ -110,6 +110,7 @@ Usually used in the singular preceeded by an indefinite article and an adjective
 {{top}}
 *Danish: [[slagtilfælde]] {{n}} (1)
 *German: [[Anfall]] ''m'' (1,2,3)
+*Swedish: [[Anfall]]
 {{mid}}
 {{bottom}}
 
