robot  Adding: zh Modifying: io, ru <float#903979>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -162,7 +162,9 @@
 {{top}}
 {{mid}}
 {{bottom}}
+
 [[fr:float]]
-[[io:Float]]
+[[io:float]]
 [[it:float]]
-[[ru:Float]]
+[[ru:float]]
+[[zh:float]]
