--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -31,6 +31,7 @@
 [[Category:1000 English basic words]]
 
 [[fr:curtain]]
-[[io:Curtain]]
+[[io:curtain]]
 [[it:curtain]]
 [[fi:curtain]]
+[[zh:curtain]]
