--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -1,9 +1,10 @@
 ==English==
+
 ===Etymology===
 From [[Serbo-Croatian]] [[jug|jugo]] (''south'') and '''slavija''' (''slavia'', the land of the [[Slav]]s).  Literally, ''the land of the south Slavs''.
 
-===Alternate spelling===
-[[Jugoslavia]] (''common pre-WWII spelling'')
+===Alternative spellings===
+* [[Jugoslavia]] (''common pre-WWII spelling'')
 
 ===Proper noun===
 '''Yugoslavia'''
