robot  Adding: fr <New Zealand#910161>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -81,6 +81,7 @@ From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in
 *[[newzealending]], [[newzealander]], [[nyzealending]], [[nyzealender]]
 *[[newzealandsk]], [[nyzealandsk]]
 
+[[fr:New Zealand]]
 [[hu:New Zealand]]
 [[fi:New Zealand]]
 [[sv:New Zealand]]
