robot  Modifying: da <et cetera#912302>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -58,9 +58,9 @@ Often abbreviated "etc." or "&c". [[Ampersand]] ("[[&]]") comes from the Latin w
 *[[&]]
 *[[cetera]]
 *[[et]]
-[[da:Et cetera]]
-[[fr:et cetera]]
-
 ===Common Mispronounciations===
 * Eksetra
 * Eksetera
+
+[[da:et cetera]]
+[[fr:et cetera]]
