robot  Adding: zh Modifying: ang, io <found#914825>

--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -44,7 +44,8 @@
 *[[foundation]]
 *[[founder]]
 
-[[ang:Found]]
+[[ang:found]]
 [[fr:found]]
-[[io:Found]]
+[[io:found]]
 [[it:found]]
+[[zh:found]]
