--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -131,6 +131,7 @@ The rudder, or "steerboard" was usually hung on the right side of the boat (whic
 
 ====Synonyms====
 *[[larboard]]
+*[[left]]
 
 ====Antonyms====
 *[[starboard]]
@@ -155,6 +156,7 @@ The rudder, or "steerboard" was usually hung on the right side of the boat (whic
 #:''on the port side''
 
 ====Synonyms====
+*[[larboard]]
 *[[left]]
 
 ====Antonyms====
