robot  Adding: io <New Zealand#916447>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -82,6 +82,7 @@ From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in
 *[[newzealandsk]], [[nyzealandsk]]
 
 [[fr:New Zealand]]
+[[io:New Zealand]]
 [[hu:New Zealand]]
 [[fi:New Zealand]]
 [[sv:New Zealand]]
