--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -56,6 +56,7 @@
 *Finnish: [[ryömiä]], [[madella]]
 *German: [[kriechen]]
 {{mid}}
+*Italian: [[strisciare]]
 *Russian: [[ползти]]
 *Spanish: [[arrastrarse]]
 {{bottom}}
