--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -194,3 +194,4 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 [[hu:plum]]
 [[ja:plum]]
 [[pl:plum]]
+[[fi:plum]]
