robot  Adding: hu <come#924183>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -102,6 +102,7 @@ Latin [[comede]] (imperative), [[comedit]] (present).
 [[io:come]]
 [[it:come]]
 [[la:come]]
+[[hu:come]]
 [[pl:come]]
 [[fi:come]]
 [[ta:come]]
