--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -46,6 +46,7 @@
 *Russian: [[ручка]] (rúčka) {{f}}
 *Spanish: [[esfero]] {{m}}, [[pluma]] {{f}}
 *Swedish: [[penna#Swedish|penna]]
+*{{te}}: [[పెన్ను]], [[కలము]], [[కలం]] (pennu, kalamu, kalam)
 *Turkish: [[kalem]]
 {{bottom}}
 
