--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -51,7 +51,7 @@
 * Italian: [[dritto]], [[liscio]], [[subito]], [[eterosessuale]] (8)
 * [[Portuguese]]: [[reto]] ''m'' (1), [[direto]] ''m'' (3), [[honesto]] ''m'' (3), [[direito]] ''m'' (4)
 * [[Swedish]]: [[rak]] (1,3,6)
-*{{te}}: [[సరళమైన]] (saraLamaina), [[సూటి]] (sooTi)
+*{{te}}: [[తిన్నని]] (tinnani), [[సరళమైన]] (saraLamaina), [[సూటి]] (sooTi)
 * [[Welsh]]: [[uniawn]]
 {{bottom}}
 
