--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -70,7 +70,7 @@
 {{mid}}
 * German: [[geradeaus]]
 * [[Swedish]]: [[rakt fram]]
-*{{te}}: [[తిన్నగా]] (tinnagA)
+*{{te}}: [[తిన్నగా]] (tinnagaa), [[సూటిగా]] (sootigaa)
 {{bottom}}
 
 ===Noun===
