--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -43,7 +43,7 @@
 *Mongolian: [[олох]]
 *Russian: [[найти]]
 *Slovene: [[najti]]
-*Spanish: [[encontrar]]
+*Spanish: [[encontrar]], [[hallar]]
 *Swedish: [[finna]], [[hitta]], [[uppdaga]], [[upptäcka]], [[utröna]]
 {{bottom}}
 
@@ -85,7 +85,6 @@
 *{{ttbc|Ido}}: [[trovar]]
 *{{ttbc|Indonesian}}: [[temu]], [[temu|menemukan]], [[temu|menemui]]
 *{{ttbc|Portuguese}}: [[achar]], [[encontrar]] (1,2), [[achar]] (3), [[julgar]]
-*{{ttbc|Spanish}}: [[descubrir]], [[hallar]]
 
 ===Noun===
 {{en-noun|find|finds}}
@@ -105,6 +104,7 @@
 *French: [[trouvaille]] ''f''
 {{mid}}
 *Russian: [[находка]] ''f''
+*Spanish: [[hallazgo]] ''m''
 {{bottom}}
 
 [[Category:200 English basic words]]
