[[Maoriland]] <New Zealand#928958>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -55,6 +55,9 @@ From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in
 *Turkish: [[Yeni Zelanda]]
 {{bottom}}
 
+====Synonyms====
+* [[Maoriland]]
+
 ====Derived terms====
 *[[New Zealander]]
 *[[Enzed]]
