robot  Adding: hu <fit#931100>

--- a/en/f/fit.6886.wikitext
+++ b/en/f/fit.6886.wikitext
@@ -148,5 +148,6 @@ Usually used in the singular preceeded by an indefinite article and an adjective
 [[io:fit]]
 [[id:fit]]
 [[it:fit]]
+[[hu:fit]]
 [[fi:fit]]
 [[zh:fit]]
