--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -1,17 +1,17 @@
 ==English==
-
 ===Etymology===
-Late Latin ''icon'' ← Greek ''εἰκών'' (likeness, image, figure, representation).
+From {{L.}} ''icon'', derived from {{Gr.}} [[εἰκών]] (''eikon'') "likeness, image, figure, representation".
 
 ===Noun===
-'''icon'''
+{{en-noun|icon|icons}}
+[[Image:Cyril_Methodius25K.jpg|right|thumb|160px|A religious icon]]
 
 # [[image]], [[picture]], representation
 # a religious painting, often done on wooden panels 
 # a person or thing that is the best example of a certain profession or some doing.
 #:''That man is an icon in the business; he personifies loyalty and good business sense".
 # a small picture which represents something (such as an icon on a computer screen which when clicked performs some function)
-# (''Linguistics'') A type of noun whereby the form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons. See also [[symbol]] and [[index]].
+#{{linguistics}}: A type of noun whereby the form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons. See also [[symbol]] and [[index]].
 
 ====Related terms====
 *[[iconic]]
