--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -1,3 +1,4 @@
+[[Image:48 - Mende - Pont Notre-Dame.jpg|thumb|A bridge (sense 1)]]
 ==English==
 ===Noun===
 '''bridge''' (''plural'' '''bridges''')
