--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -35,6 +35,7 @@
 *Russian: [[играть]]
 *Slovene: [[igrati se]]
 *Spanish: [[jugar]]
+*Swedish: [[leka]]
 {{bottom}}
 
 '''produce music using  a musical instrument'''
@@ -51,6 +52,7 @@
 *Russian: [[играть]]
 *Slovene: [[igrati]]
 *Spanish: [[tocar]]
+*Swedish: [[spela]]
 {{bottom}}
 
 '''deal with a situation in a diplomatic manner'''
@@ -70,6 +72,7 @@
 *Polish: [[grać]], [[występować]]
 *Russian: [[играть]]
 *Slovene: [[igrati]]
+*Swedish: [[agera]], [[spela]] en roll
 {{bottom}}
 
 '''participate in (a game)'''
@@ -83,7 +86,7 @@
 *Russian: [[играть]]
 *Slovene: [[igrati]]
 *Spanish: [[jugar]] a
-*Swedish: [[leka]], [[spela]]
+*Swedish: [[spela]]
 {{bottom}}
 
 '''produce music using (a musical instrument)'''
@@ -128,7 +131,6 @@
 *{{ttbc|Portuguese}}: [[jogar]]
 *{{ttbc|Slovak}}: [[hrať sa]]
 *{{ttbc|Slovak}}: [[hrať]] (5), (6), (7)
-*{{ttbc|Swedish}}: [[leka]] (1), [[spela]] (1,2,4)
 *{{ttbc|Tupinambá}}: [[nhemosaraîa]]
 
 ====Derived terms====
@@ -176,14 +178,16 @@
 {{mid}}
 *Italian: [[dramma]] {{m}}
 *Slovene: [[igra]] {{f}}
+*Swedish: [[pjäs]] {{c}}
 {{bottom}}
 
 '''individual's performance in a sport'''
 {{top}}
 *Dutch: [[spelbeweging]] {{f}}
 *Finnish: [[peli]]
-*Slovene: [[igra]] {{f}}
 {{mid}}
+*Slovene: [[igra]] {{f}}
+*Swedish: [[spel]] {{c}}
 {{bottom}}
 
 '''major move by a business'''
@@ -198,7 +202,6 @@
 *{{ttbc|German}}: [[Spielzug]] {{m}} (2)
 *{{ttbc|Polish}}: [[sztuka]] {{f}} (1)
 *Slovak [[hra]] (1, 2)
-*{{ttbc|Swedish}}: [[pjäs]] {{c}} (1)
 
 ====Derived terms====
 *[[playbill]]
