--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -13,6 +13,7 @@
 
 === Translations ===
 *[[Dutch]]: [[kwam]]
+*[[German]]: [[kam]]
 *[[Indonesian]]: [[datang]], [[datang|mendatangi]], [[datang|mendatangkan]]
 *[[Japanese]]: [[来た]] ([[きた]], kita)
 [[Category:200 English basic words]]
