--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -31,7 +31,7 @@
 {{top}}
 *Dutch: [[kosten]]
 *German: [[kosten]]
-*Greek: [[κοστίζω]] [ko̞ˈstizo̞] (means also "to cause damage or distress"), [[στοιχίζω]] [stiˈçizo̞] (means also "to claim", "to align" and "to write verses"), [[τιμώμαι]] [tiˈmo̞me̞], [[κάνω]] [ˈkano̞] [colloquial (has a huge number of meanings, one of them is "to cost")]
+*Greek: [[κοστίζω]] [ko̞ˈstizo̞] (means also "to cause damage or distress"), [[στοιχίζω]] [stiˈçizo̞] (means also "to inflict" and "to align"), [[τιμώμαι]] [tiˈmo̞me̞], [[κάνω]] [ˈkano̞] [colloquial (has a huge number of meanings, one of them is "to cost")]
 *Indonesian: [[habis|menghabiskan]] biaya
 *Italian: [[costare]]
 {{mid}}
