/* English */ Etymology breakup + More senses + Swedish translation <port#941560>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -1,28 +1,76 @@
 ==English==
 
 ===Etymology===
-From ''Oporto'', Portugal <!-- The drink is - how about the other senses?  The senses below are have at least two etymologies -->
+#From {{Pg.}} ''[[Oporto]]'' "city in [[Portugal]]".
+#From {{ME.}} ''[[porte]]'' < {{MF.}} "gate, door" < {{L.}} ''[[porta]]'' "passage, gate".
+#From {{ME.}} < {{OE.}} < {{L.}} ''[[portus]]'' "port, harbor".
+#From {{ME.}} ''[[porte]]'' < {{MF.}} ''[[porter]]'' "to carry" < {{L.}} ''[[portare]]'' "to carry".
+#From the fact that the rudder, or "[[steerboard]]" was usually hung on the right side of the boat (which came to be called [[starboard]]) so only the left side of the boat could be put against the dock when in port, hence it became called the port side.
 
-====Noun====
+===Noun===
 {{en-noun-reg}}
 
-#A place on the coast at which ships dock and cargo and/or passengers are loaded and unloaded.
-#A town or city containing such a place.
 #A type of [[fortified]] wine traditionally made in [[Portugal]].
+
+====Synonyms====
+*(''type of fortified wine traditionally made in Portugal''): [[porto]]<!--does this exist?-->, [[port wine]]
+
+====Translations====
+
+'''type of fortified wine traditionally made in Portugal'''
+{{top}}
+*Finnish: [[portviini]]
+*French: [[vin de Porto]] {{m}}
+*German: [[Portwein]] {{m}}
+*Greek: [[πορτό]] ''n'', [[οίνος Πορτογαλίας]] {{m}}
+*Italian: [[porto]] {{m}}
+{{mid}}
+*Portuguese: [[vinho do Porto]] {{m}}
+*Spanish: [[vino de Oporto]] {{m}}
+*Swedish: [[portvin]] {{n}}
+{{bottom}}
+
+===Noun===
+{{en-noun-reg}}
+
 #An entryway or [[portal]].
 #An opening where a connection (such as a pipe) is made.
 #A [[porthole]].
 # {{computing}} A logical or physical construct in and from which data are transferred.
-# {{computing}} The act of adapting a [[program]] so that it works on a different [[platform]] from the one on which it originally worked.
 # ''(computing)'' A female connector of an electronic device, into which a cable's male connector can be inserted.
 # {{curling}} A space between two [[stone]]s wide enough for a delivered stone to pass through
-#(''Queensland'') {{AU}} A schoolbag or suitcase. ''Probale abbreviation of [[portmanteau]]
+
+====Translations====
+
+'''entryway, portal'''<br>
+:''See'' '''[[portal]]'''
+
+'''opening where a connection is made'''
+{{top}}
+*Finnish: [[liitin]], [[portti]] (''computers'')
+{{mid}}
+*Swedish: [[port#Swedish|port]] {{c}}
+{{bottom}}
+
+'''porthole'''
+:''See'' '''[[porthole]]'''
+
+'''computing: logical or physical construct in and from which data are transferred'''
+{{top}}
+*Finnish: [[portti]]
+{{mid}}
+*Swedish: [[port#Swedish|port]] {{c}}
+{{bottom}}
+
+===Noun===
+{{en-noun-reg}}
+
+#A place on the coast at which ships dock and cargo and/or passengers are loaded and unloaded.
+#A town or city containing such a place.
 
 ====Synonyms====
 *(''place where ships dock''): [[harbour]], [[haven]]
 *(''town or city containing such a place''): [[harbour city]], [[harbour town]]
-*(''wine''): [[porto]]<!--does this exist?-->, [[port wine]]
-*(''schoolbag''): [[satchel]], [[schoolbag]]
 
 ====Translations====
 
@@ -39,6 +87,7 @@ From ''Oporto'', Portugal <!-- The drink is - how about the other senses?  The s
 {{mid}}
 *Portuguese: porto {{m}}
 *Spanish: [[puerto]] {{m}}
+*Swedish: [[hamn]] {{c}}
 {{bottom}}
 
 '''town or city containing such a place'''
@@ -52,46 +101,8 @@ From ''Oporto'', Portugal <!-- The drink is - how about the other senses?  The s
 {{mid}}
 <!--languages from N to J go here-->
 *Spanish: [[puerto]] {{m}}
+*Swedish: [[hamnstad]] {{c}}
 {{bottom}}
-
-'''type of fortified wine'''
-{{top}}
-*Finnish: [[portviini]]
-*French: [[vin de Porto]] {{m}}
-*German: [[Portwein]] {{m}}
-*Greek: [[πορτό]] ''n'', [[οίνος Πορτογαλίας]] {{m}}
-*Italian: [[porto]] {{m}}
-{{mid}}
-*Portuguese: [[vinho do Porto]] {{m}}
-*Spanish: [[vino de Oporto]] {{m}}
-{{bottom}}
-
-'''schoolbag'''<br/>
-''See [[schoolbag]]''
-
-'''computing: logical or physical construct in and from which data are transferred'''
-{{top}}
-*Finnish: [[portti]]
-{{mid}}
-{{bottom}}
-
-'''computing: act of adapting a program so that it works on a different platform'''
-{{top}}
-*Finnish: [[sovitus]], [[sovittaminen]], [[porttaaminen]] (''informal''), [[porttaus]] (''informal'')
-{{mid}}
-{{bottom}}
-
-'''entryway, portal'''<br>
-''See [[portal]]''
-
-'''opening where a connection is made'''
-{{top}}
-*Finnish: [[liitin]], [[portti]] (''computers'')
-{{mid}}
-{{bottom}}
-
-'''porthole'''<br>
-''See [[porthole]]''
 
 =====Translations to be checked=====
 {{checktrans}}
@@ -104,25 +115,54 @@ From ''Oporto'', Portugal <!-- The drink is - how about the other senses?  The s
 *{{ttbc|Korean}}: [[항구]] [港口] (hanggu)
 *{{ttbc|Latin}}: [[portus]] {{m}} (1)
 *{{ttbc|Malay}}: [[bandar]] (2)
-*{{ttbc|Swedish}}: [[hamn]] ''c'' (1), [[port#Swedish|port]] ''c'' (4)
+
+===Noun===
+{{en-noun-reg}}
+
+# {{AU}} (''Queensland'') A schoolbag or suitcase. ''Probale abbreviation of [[portmanteau]]
+# {{computing}} The act of adapting a [[program]] so that it works on a different [[platform]] from the one on which it originally worked.
+
+====Synonyms====
+*(''schoolbag''): ''See'' '''[[schoolbag]]'''
+
+====Translations====
+
+'''AU, Queensland: schoolbag'''
+:''See'' '''[[schoolbag]]'''
+
+'''computing: act of adapting a program so that it works on a different platform'''
+{{top}}
+*Finnish: [[sovitus]], [[sovittaminen]], [[porttaaminen]] (''informal''), [[porttaus]] (''informal'')
+{{mid}}
+*Swedish: [[portering]] {{c}}
+{{bottom}}
 
 ===Transitive verb===
 '''port''' (porting, ported)
 
-#To transfer from one state to another.
+# To transfer from one state to another.
+# {{computing}} To adapt a program so that it works on a different platform.
 # {{obsolete}} To carry, bear, or [[transport]].<!--Whence "porter".-->
 
 ====Translations====
+
+'''to transfer from one state to another'''
+{{top}}
 *Dutch: [[overdragen]]
 *Finnish: [[siirtää]] (1), [[kantaa]] (2)
 *French: [[porter]]
+{{mid}}
 *Portuguese: [[portar]]
+{{bottom}}
+
+'''computing: to adapt a program so that it works on a different platform'''
+{{top}}
+{{mid}}
+*Swedish: [[portera]]
+{{bottom}}
 
 ====Derived terms====
 *[[porter]]
-
-===Etymology===
-The rudder, or "steerboard" was usually hung on the right side of the boat (which came to be called [[starboard]]) so only the left side of the boat could be put against the dock when in [[port]], hence it became called the [[port]] side.
 
 ===Noun===
 '''port''' (''no plural'')
@@ -147,6 +187,7 @@ The rudder, or "steerboard" was usually hung on the right side of the boat (whic
 *Italian: [[babordo]] {{m}}
 *Portuguese: [[bombordo]] {{m}}
 *Spanish: [[babor]] {{m}}
+*Swedish: [[babord]] {{c}}
 {{bottom}}
 
 ===Adjective===
@@ -163,9 +204,15 @@ The rudder, or "steerboard" was usually hung on the right side of the boat (whic
 *[[starboard]]
 
 ====Translations====
+
+'''of or relating to port, the lefthand side of a vessel'''
+{{top}}
 *Dutch: [[haven-]]
 *French: du [[bâbord]]
+{{mid}}
 *Portuguese: [[portu&aacute;rio]]
+*Swedish: [[babord]], [[babord]]-
+{{bottom}}
 
 ===See also===
 *[[w:port|Wikipedia article on ports (the places where ships dock)]]
@@ -174,6 +221,7 @@ The rudder, or "steerboard" was usually hung on the right side of the boat (whic
 *[[w:porting|Wikipedia article on ports in computing (between platforms)]]
 
 ----
+
 ==Dutch==
 ===Noun===
 '''port''' ''n''
