--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -10,7 +10,7 @@ From Dutch '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlement in
 ===Proper noun===
 '''New Zealand'''
 
-#A country in [[Oceania]], to the east of [[Australia]]. Official name: New Zealand.  Abbreviation: '''NZ'''.
+#A country in [[Oceania]], to the east of [[Australia]]. Official name: New Zealand.  Abbreviation: '''[[NZ]]'''.
 #The islands of New Zealand, especially the North Island, South Island and nearby coastal islands.
 #The Realm of New Zealand, including the Cook Islands, Niue, Tokelau and the Ross Dependency.
 #The New Zealand Government or the Parliament of New Zealand.
@@ -61,6 +61,7 @@ From Dutch '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlement in
 * [[Land of the Long White Shroud]] - ''(Australia, humourous, insulting)''
 *[[Aotearoa]]
 *[[Aotearoa New Zealand]]
+*[[NZ]]
 ====Derived terms====
 *[[New Zealander]]
 *[[Enzed]]
