--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -30,6 +30,7 @@
 *German: [[spielen]]
 *Italian: [[giocare]]
 {{mid}}
+*Japanese: [[遊ぶ]] (asobu)
 *Old English: [[lacan|lācan]]
 *Polish: [[bawić się]]
 *Russian: [[играть]]
@@ -38,7 +39,7 @@
 *Swedish: [[leka]]
 {{bottom}}
 
-'''produce music using  a musical instrument'''
+'''produce music using a musical instrument'''
 <!--Note: this an INTRANSITIVE sense-->
 {{top}}
 *Catalan: [[tocar]]
@@ -47,6 +48,7 @@
 *French: [[jouer]]
 *German: [[spielen]]
 {{mid}}
+*Japanese: [[演奏]]する (ensō suru)
 *Old English: [[lacan|lācan]]
 *Polish: [[grać]]
 *Russian: [[играть]]
@@ -127,7 +129,6 @@
 *{{ttbc|Ido}}: [[ludar]] (1), [[plear]] (2, 4)
 *{{ttbc|Interlingua}}: [[jocar]]
 *{{ttbc|Irish}}: [[súgradh]] (''verbal noun'')
-*{{ttbc|Japanese}}: [[遊ぶ]] (asobu)
 *{{ttbc|Portuguese}}: [[jogar]]
 *{{ttbc|Slovak}}: [[hrať sa]]
 *{{ttbc|Slovak}}: [[hrať]] (5), (6), (7)
