robot  Adding: id <mandat#944622>

--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -31,3 +31,4 @@ From Latin [[mandatum]] or [[mandatus]], from [[mandare]] "to put in one's hands
 [[et:mandat]]
 [[fr:mandat]]
 [[io:mandat]]
+[[id:mandat]]
