--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -8,7 +8,7 @@
 
 * '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 日月 (AB)
 
-* '''Graphical Significance and Origin''': 
+* '''Graphical Significance and Origin''': From [[日]] ‘sun’ + [[月]] ‘moon’.
 
 * '''Common Meaning'''
 *# [[bright]], [[light]], [[brilliant]]
