/* English */ merge and add to derived/related <cut#951457>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -24,16 +24,18 @@
 # To change direction suddenly (in a [[route]]); to make a sudden [[sprint]] in order to [[evade]] the [[defense]]
 #(''filmmaking'') To [[cease]] [[record]]ing activities.
 
-====Derived Terms====
-*[[cutting edge]]
-*[[cutting remark]]
-
 ====Related terms====
+{{top}}
 *[[cut for one’s size]]
 *[[cut down]]
 *[[cut off]]
 *[[cut out]]
+{{mid}}
+*[[cutting edge]]
+*[[cutting remark]]
 *[[cut up]]
+*[[undercut]]
+{{bottom}}
 
 ====Translations====
 {{top}}
@@ -86,8 +88,8 @@
 ====Translations====
 {{top}}
 *Danish: [[snit]] (1,2,3,4,5,7), [[hug]] (1,2), tage af (6), [[skår]] (''glass, pottery''), [[billiger]] (8). [[spor]], [[mærke]], [[risse]], [[fure]], [[rille]].
-*Italian: [[taglio]].
 {{mid}}
+*Italian: [[taglio]].
 {{bottom}}
 
 ===Adjective===
