stoke order, ->es <坏#952220>

--- a/en/坏/坏.13010.wikitext
+++ b/en/坏/坏.13010.wikitext
@@ -5,7 +5,7 @@
 * '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 7|7]]
 
 * '''Stroke order''': 
-
+[[Image:坏-bw.png|thumbnail|center|600 px]]
 * '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 4119<sub>0</sub>
 
 * '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 土一火 (GMF)
@@ -89,4 +89,5 @@
 ** Hex: A7A5
 ** Decimal: 42917
 
+[[es:坏]]
 [[fr:坏]]
