--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -65,7 +65,9 @@ See [[feel]]
 *Indonesian: [[rasa|merasa]], [[rasa|merasakan]], [[anggap|menganggap]], [[anggap|beranggap]], [[anggap|beranggapan]], [[rasa|terasa]]
 *Japanese: [[感じた]] ([[かんじた]], kanjita),  [[感じられた]] ([[かんじられた]], kanjirareta)
 *Spanish: [[sentido]]
-*Swedih: [[känt]]
+*Swedish: [[känt]]
+
+----
 
 ==Danish==
 ===Noun===
@@ -77,6 +79,10 @@ See [[feel]]
 *[[feltflaske]] ''c''
 *[[feltseng]] ''c''
 *[[felttog]] ''n''
+
+[[Category:Danish nouns]]
+
+----
 
 ==Norwegian==
 ===Noun===
