--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -1,1 +1,70 @@
-e
+[[Image:Brick wall old.jpg|A brick wall|thumb]]
+==English==
+
+===Pronunciation===
+*brĭk, /brɪk/, /<tt>brIk</tt>/
+*{{audio|en-us-brick.ogg|Audio (US)}}
+*:[[Rhymes:English:-ɪk|Rhymes: -ɪk]]
+
+===Noun===
+'''brick''' ([[bricks]])
+
+# A hardened block of [[mud]], [[clay]], etc, used for building
+#:''This house is made of '''bricks'''''.
+#Bricks as a building material
+#:''This house is made of '''brick'''''.
+# {{basketball}} A shot which misses, particularly one which bounces directly out of the basket.
+#: ''We can't win if we keep throwing up '''bricks''' from three-point land.''
+#Term of endearment, especially towards a subject who has performed a favour of an act of kindness without expectation of reciprocity.
+#: ''Thanks for helping me wash the car. You're a '''brick'''.''
+
+====Translations====
+{{top}}
+*'''Arabic''': [[طوبة]] (ṭūbah)
+*'''[[Breton]]''': [[brikenn]] ''f'' -où
+*'''Chinese''': [[磚]], [[砖]]
+*'''Czech''': [[cihla]]
+*'''Finnish''': Tiili (1-2)
+*'''French''': [[brique]]
+*'''Ido''': [[briko]]
+*'''Indonesian''': [[bata]], [[batu bata]]
+*'''Italian''': [[mattone]]
+{{mid}}
+*'''Japanese''': [[煉瓦]] ([[レンガ]], renga)
+*'''Latvian''': [[ķieģelis]] {{m}} (1,2)
+*'''Portuguese''': [[tijolo]]
+*'''Romanian''':[[cărămidă]] ''f''
+*'''Russian''': [[кирпич]] (kirpich)
+*'''Slovene''': [[opeka]] ''f'' (1,2)
+*'''Spanish''': [[ladrillo]]
+*'''Swahili''': [[tofali]], [[matofali]] ''pl'' (1,2) ''(noun 5/6)''
+*[[Telugu]]: [[ఇటుక]] (1, 2)
+*'''Ukrainian''': [[цеглина]] (cehl'''y'''na) {{f}} (1), [[цегла]] (c'''e'''hla) {{f}} (2)
+*'''[[w:Vietnamese language|Vietnamese]]''': [[gạch]]
+{{bottom}}
+
+===Adjective===
+'''brick'''
+
+#Made of brick
+#:''All that was left after the fire was the '''brick''' chimney''.
+
+====Translations====
+*'''Russian''': [[кирпичный]] (kirpichniy)
+*Ukrainian: [[цегельний]] (ceh'''e'''l'nyj) {{m}}
+*[[w:Vietnamese language|Vietnamese]]: bằng gạch
+
+===Derived terms===
+* [[bricks and mortar]]
+* [[bricker]]
+
+[[Category:1000 English basic words]]
+
+[[el:brick]]
+[[fr:brick]]
+[[io:brick]]
+[[it:brick]]
+[[hu:brick]]
+[[ro:brick]]
+[[fi:brick]]
+[[zh:brick]]
