--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -14,10 +14,10 @@
 ====Translations====
 '''fair skinned/haired person'''
 {{top}}
-*{{ga}}: [[fionn]] (of both males and females), fear fionn (fair/pale man) {{m}},<br> bean fhionn (fair/pale woman) {{f}}
+*{{ga}}: [[fionn]] (of both males and females), fear fionn ("fair/pale man") {{m}},<br> bean fhionn ("fair/pale woman") {{f}}
 * {{io}}: [[blonda]]
 {{mid}}
-*{{gd}}: [[bàn]], [[fionn]] (of both males and females), fear bàn (fair/pale man) {{m}},<br> bean bhàn (fair/pale woman) {{f}}
+*{{gd}}: [[bàn]], [[fionn]] (of both males and females), fear bàn ("fair/pale man") {{m}},<br> bean bhàn ("fair/pale woman") {{f}}
 *Swedish: [[blondin]]
 *{{cy}}: [[penfelyn]]
 {{bottom}}
