--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -8,18 +8,18 @@
 #a person of [[fair]] skin and fair hair (usually spelled "''blonde''" when referring to a woman).
 #a [[pale]] [[golden]] [[brown]] [[colour]].
 
-===Usage note===
+===Usage notes===
 : In the English language, it is only one of a few distinct words where the gender differentiation is actually reflected in the spelling of the word (i.e. ''She is a blonde woman.'' vs. ''He is a blond man.''), even though this is a relatively common occurence in other languages. "Blond(e)" has only recently been borrowed from French into English to refer to light hair; [[traditional]] terms for light hair in English are "''fair(-haired)''", "''[[flaxen]]''", and "''[[towhead|tow headed]]''".
 
 ====Translations====
 '''fair skinned/haired person'''
 {{top}}
-*{{ga}}: [[fionn]] (of both males and females), fear fionn ("fair/pale man") {{m}},<br> bean fhionn ("fair/pale woman") {{f}}
-* {{io}}: [[blonda]]
+*[[Irish]]: [[fionn]] (of both males and females), fear fionn ("fair/pale man") {{m}},<br> bean fhionn ("fair/pale woman") {{f}}
+* [[Ido]]: [[blonda]]
 {{mid}}
-*{{gd}}: [[bàn]], [[fionn]] (of both males and females), fear bàn ("fair/pale man") {{m}},<br> bean bhàn ("fair/pale woman") {{f}}
+*[[Scots Gaelic]]: [[bàn]], [[fionn]] (of both males and females), fear bàn ("fair/pale man") {{m}},<br> bean bhàn ("fair/pale woman") {{f}}
 *Swedish: [[blondin]]
-*{{cy}}: [[penfelyn]]
+*[[Welsh]]: [[penfelyn]]
 {{bottom}}
 
 ===Adjective===
@@ -75,10 +75,10 @@
 | [[blonda]]
 | [[blonda]]
 |- align=center
-| bgcolor="#FFFFF0" colspan=2 | ''Comparative''
+| bgcolor="#FFFFF0" colspan=2 | {{compar}}
 | colspan=7 | [[blondare]]
 |- align=center
-| bgcolor="#FFFFF0" rowspan=2 width=60 | ''Superlative''
+| bgcolor="#FFFFF0" rowspan=2 width=60 | {{superl}}
 | bgcolor="#FFFFF0" width=60 | ''Attribute''
 | colspan=2 style="background:#eeeeee" |  
 | [[blondaste]]
