--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -179,6 +179,7 @@
 '''theatrical performance'''
 {{top}}
 *Catalan: [[obra]] {{f}}
+*Chinese: [[戏剧]], [[戲劇]]
 *Dutch: [[optreden]] {{n}}, [[schouwspel]] {{n}}, [[toneelstuk]] {{n}}, [[stuk]] {{n}}
 *Finnish: [[näytelmä]]
 *French: [[pièce]] {{f}}
