--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -46,7 +46,7 @@
 # {{computing}} To [[jump]] to a [[different]] [[location]] in a [[program]], especially as the result of a [[conditional]] [[statement]].
 
 ====Translations====
-*{{fr}}: brancher (3)
+*French: brancher (3)
 *German: [[abzweigen]] (1), [[verzweigen]] (2), [[springen]] (3)
 
 ===Related terms===
