--- a/en/時/時.17003.wikitext
+++ b/en/時/時.17003.wikitext
@@ -38,6 +38,10 @@
 ----
 
 == Japanese ==
+===Noun===
+'''時''' ([[じ]], ''ji'')
+# [[hour]], [[o'clock]]
+
 ===Kanji===
 {{kanji|[[じ]] (ji), [[し]] (shi)|[[とき]] (toki), [[これ]] (kore)}}
 
@@ -54,6 +58,7 @@
 *[[時短]]
 *[[時雨]]
 
+[[Category:Japanese nouns]]
 ----
 
 == Korean [[Hanja]] ==
