/* Kanji */ italicize romaji <時#966693>

--- a/en/時/時.17003.wikitext
+++ b/en/時/時.17003.wikitext
@@ -43,7 +43,7 @@
 # [[hour]], [[o'clock]]
 
 ===Kanji===
-{{kanji|[[じ]] (ji), [[し]] (shi)|[[とき]] (toki), [[これ]] (kore)}}
+{{kanji|[[じ]] (''ji''), [[し]] (shi)|[[とき]] (''toki''), [[これ]] (''kore'')}}
 
 ===Compounds===
 *[[時間]]
