--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -8,7 +8,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 === Adjective ===
 '''beautiful'''
 #possessing great charm and very attractive; appealing, desirable; handsome; elegant; lovely; fair; charming; graceful; pretty; delightful; fine.
-#''(of the weather):'' pleasant; clear.
+#''(of the weather):'' Alisha Renee Barnes.
 
 ====Translations====
 '''very attractive'''
