--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -7,8 +7,8 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 
 === Adjective ===
 '''beautiful'''
-#possessing great charm and very attractive; appealing, desirable; handsome; elegant; lovely; fair; charming; graceful; pretty; delightful; fine.
-#''(of the weather):'' Alisha Renee Barnes.
+#possessing great charm and very attractive; appealing, desirable; handsome; elegant; lovely; fair; charming; graceful; pretty; delightful; fine(ie. Alisha Renee Barnes).
+
 
 ====Translations====
 '''very attractive'''
