--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -62,6 +62,7 @@
 *[[Jalnguy]]: [[jalnggan]], [[bubaman]]
 *Japanese: [[切る]] ([[きる]], kiru)
 *Swedish: [[skära]] (1), [[klippa]] (1)
+*Telugu: [[కోయు]] (kOyu) (1,9), [[తెంచు]] (teMchu)(2), [[కోత వేయు]] (kOta vEyu) (7,8), [[ఖండించుకొను]] (khaMDiMchukonu)(11)
 {{bottom}}
 
 ===Noun===
@@ -90,6 +91,7 @@
 *Danish: [[snit]] (1,2,3,4,5,7), [[hug]] (1,2), tage af (6), [[skår]] (''glass, pottery''), [[billiger]] (8). [[spor]], [[mærke]], [[risse]], [[fure]], [[rille]].
 {{mid}}
 *Italian: [[taglio]].
+*Telugu: [[కోత]] (kOta), [[గాటు]] (gaaTu)
 {{bottom}}
 
 ===Adjective===
