repeated word search and destroy test (please see [[User:That Guy, From That Show!|]] for explanation)  using [[w:Wikipedia:AutoWikiBrowser|AWB]] <speak#969621>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -11,7 +11,7 @@
 ===Verb===
 {{irregverb|'''to speak'''|'''[[speaks]]'''|'''[[spoke]] '''or, archaic,''' [[spake]]'''|'''[[spoken]]'''|'''[[speaking]]'''}}
 
-# to [[communicate]] by the use of sounds that are are interpreted as language; to communicate verbally.
+# to [[communicate]] by the use of sounds that are interpreted as language; to communicate verbally.
 # to make sounds with the vocal chords.
 # to express through writing.
 #:''He '''spoke''' of it in his diary''
