--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -1,7 +1,8 @@
 [[Image:48 - Mende - Pont Notre-Dame.jpg|thumb|A bridge (sense 1)]]
 ==English==
+
 ===Noun===
-'''bridge''' (''plural'' '''bridges''')
+'''bridge''' (''plural'' '''[[bridges]]''')
 
 #A [[construction]] or [[natural]] [[feature]] that [[span]]s a [[divide]].
 #: ''The rope '''bridge''' crosses the river.''
@@ -39,7 +40,7 @@
 *[[Frisian]]: [[brêge]]
 *German: [[Brücke]] {{f}}
 *Hungarian: [[híd]]
-*[[w:Ido|Ido]]: [[ponto]]
+*[[Ido]]: [[ponto]]
 *Indonesian: [[jembatan]]
 *Irish: [[droichead]]
 *Italian: [[ponte#Italian|ponte]] {{m}}
@@ -67,7 +68,7 @@
 *Tamazight: [[ⵜⵉⵍⴻⴳⴳⵡⵉⵜ]] (tileggwit) {{f}}
 *[[Telugu]]: [[వారధి]], [[వంతెన]], [[సేతువు]]
 *Turkish: [[köprü]]
-*{{vi}}: [[cầu]]
+*Vietnamese: [[cầu]]
 {{bottom}}
 
 '''card game'''
@@ -137,6 +138,7 @@
 ====Derived terms====
 * [[Maryland bridge]]
 * [[bridge mount]]
+
 [[Category:1000 English basic words]]
 [[Category:Card games]]
 
