--- a/en/倶/倶.11073.wikitext
+++ b/en/倶/倶.11073.wikitext
@@ -29,7 +29,7 @@
 ***'''[[Yale]]''': 
 
 * '''Other info''': 
-
+[[Category:Chinese hanzi]]
 ----
 
 == [[Japanese]] [[Kanji]] ==
@@ -39,7 +39,7 @@
 ** '''[[Kun]]''': [[ともに]] (tomoni)
 
 * '''Other info''':  
-
+[[Category:Japanese kanji]]
 ----
 
 == [[Korean]] [[Hanja]] ==
@@ -49,7 +49,7 @@
 * '''Romanization'''
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': gu
 ** '''[[McCune-Reischauer]]''': ku
-
+[[Category:Korean hanja]]
 ----
 
 == Dictionary Information ==
