--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -128,6 +128,15 @@
 
 [[Category:1000 English basic words]]
 
+----
+==French==
+
+===Noun===
+'''pull''' ''m''
+# [[pullover]], [[sweatshirt]]
+
+[[Category:fr:Clothing]]
+
 [[et:pull]]
 [[fr:pull]]
 [[io:pull]]
