audio, fmt <came#977710>

--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -2,16 +2,18 @@
 
 {{rank|those|own|old|106|came|men|come|without}}
 
+
+=== Pronunciation ===
+*[[w:SAMPA|SAMPA]]: /"keIm/
+*[[w:IPA|IPA]]: /'keɪm/
+*{{audio|en-us-came.ogg|Audio (US)}}
+
 === Verb ===
 '''came'''
 
 # past tense of to [[come]]
 
-=== Pronunciation ===
-*[[w:SAMPA|SAMPA]]: /"keIm/
-*[[w:IPA|IPA]]: /'keɪm/
-
-=== Translations ===
+==== Translations ====
 *[[Dutch]]: [[kwam]]
 *[[German]]: [[kam]]
 *[[Indonesian]]: [[datang]], [[datang|mendatangi]], [[datang|mendatangkan]]
