--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -1,8 +1,8 @@
 ==English==
 
-{{rank|struck|man\'s|write|651|caught|below|window|instead}}
+{{rank|struck|man's|write|651|caught|below|window|instead}}
 
-=== Pronunciation ===
+===Pronunciation===
 *[[w:IPA|IPA]]: /'kɔφt/
 *{{audio|en-us-caught.ogg|Audio (US)}}
 *{{audio|en-us-inlandnorth-caught.ogg|Audio (US-Inland North)}}
@@ -11,12 +11,15 @@
 
 ===Verb===
 '''caught'''
-#Past tense of ''to [[catch]]''.
-#Past participle of ''to [[catch]]''.
+
+# Past tense of ''to [[catch]]''.
+# Past participle of ''to [[catch]]''.
 
 ===Adjective===
 '''caught'''
+
 # {{Cricket}} Of the [[method]] of being [[out]] in which the [[striker]] hits the ball and a [[fielder]] catches it.
 
 [[Category:English irregular verb forms]]
+
 [[it:caught]]
