--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -1,88 +1,4 @@
-==English==
-
-===Pronunciation===
-*{{IPA|/pεn/}}
-*{{SAMPA|/pEn/}}
-*{{audio|en-us-pen.ogg|Audio (US)}}
-*{{audio|en-us-inlandnorth-pen.ogg|Audio (US-Inland North)}}
-
-===Noun===
-{{en-noun-reg}}
-
-#A utensil, usually [[tubular]] in form, containing ink used to [[write]] or make marks.
-#: ''He took notes with a '''pen'''.''
-# A mark made with [[ink]].
-#: ''I need some stain remover, this mark is in '''pen'''.''
-#An [[enclose]]d area used to contain [[domesticated]] animals, especially [[sheep]] or [[cattle]].
-#: ''There are two steers in the third '''pen'''.''
-#{{baseball}} The [[bullpen]].
-#: ''Two righties are up in the '''pen'''.''
-#A female [[swan]].
-
-====Related terms====
-*[[penmanship]]
-*[[ball-point pen]]
-*[[cartridge pen]]
-*[[felt-tip pen]]
-*[[fountain pen]]
-*[[poison pen]]
-
-====Translations====
-(''writing utensil'')
-{{top}}
-*Arabic: {{ARchar|[[قلم]]}} (qálam)
-*Dutch: pen {{f}}
-*Finnish: [[mustekynä]]
-*French: [[stylo]] {{m}}
-*German: [[Stift]] {{m}}
-*Indonesian: pen, [[pena]]
-*Irish: [[peann]] {{m}}
-*Italian: [[penna#Italian|penna]] {{f}}
-{{mid}}
-*Japanese: [[ペン]] (pen)
-*Polish: [[pióro]] {{n}}, [[długopis]] {{m}}
-*Portuguese: [[caneta]] {{f}}
-*Russian: [[ручка]] (rúčka) {{f}}
-*Spanish: [[esfero]] {{m}}, [[pluma]] {{f}}
-*Swedish: [[penna#Swedish|penna]]
-*[[Telugu]]: [[పెన్ను]], [[కలము]], [[కలం]] (pennu, kalamu, kalam)
-*Turkish: [[kalem]]
-{{bottom}}
-
-(''an enclosed area'')
-{{top}}
-*French: [[enclos]] {{m}}
-*Italian: [[recinto]] {{m}}, [[chiuso]] {{m}}, (''for sheep'') [[ovile]] {{m}}, recinto, chiuso
-{{mid}}
-*Russian: [[загон]] (zagón) {{m}}
-*Spanish: [[corral]] {{m}}
-{{bottom}}
-
-(''female swan'')
-{{top}}
-*French: [[cygne]] [[femelle]] {{m}}
-{{mid}}
-*Russian: [[лебёдка]] (lebjódka) {{f}}
-{{bottom}}
-
-===Transitive verb===
-'''to pen''' ([[penned]] / [[pent]], penned / pent)
-
-#To write (an article, a book, etc.)
-#To enclose. The irregular past tense ''pent'' is primarily used in a figurative sense in the phrase "pent up".
-
-====Translations====
-(''to write'')
-{{top}}
-*French: [[écrire]]
-*Italian: [[scrivere]]
-{{mid}}
-*Portuguese: [[escrever]]
-*Russian: [[писать]] / [[написать]] (pisát’ / napisát’)
-{{bottom}}
-
-
-----
+OH EM GEE.
 
 ==Dutch==
 ===Pronunciation===
