--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -1,16 +1,7 @@
 OH EM GEE.
 
-==Dutch==
-===Pronunciation===
-*[[w:IPA|IPA]]: /pεn/
-*[[w:SAMPA|SAMPA]]: /pEn/
+AAAAAH
 
-===Noun===
-'''pen''' ''m''
-
-#pen (''writing utensil'')
-
-----
 ==Norwegian==
 
 ===Adjective===
