--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -47,6 +47,7 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 
 '''fruit'''
 {{top}}
+*Basque: [[aran]]
 *Bosnian: [[šljiva#Bosnian|šljiva]] {{f}}
 *Catalan: [[pruna]] {{f}}
 *Croatian: [[šljiva#Croatian|šljiva]] {{f}}
@@ -58,6 +59,7 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 *Greek: [[δαμάσκηνο]] [ðaˈmasciˌno̞] {{n}}
 *Hindi: [[आलूचा]] (ālūćā), [[आलूबुखारा]] (ālūbukhārā)
 {{mid}}
+*Hungarian: [[szilva]]
 *Italian: [[prugna]] {{f}}
 *Japanese: [[セイヨウスモモ]] (seiyōsumomo), [[プラム]] (puramu)
 *Latvian: [[plūme]] {{f}}
