/* Translations */ +Telugu <fight#982680>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -35,6 +35,7 @@
 *Italian: [[lotta]] ''f'', [[combattimento]] ''m'', [[battaglia]] ''f'', [[rissa]] ''f''
 *Polish: [[walka]] {{f}}
 *Spanish: [[lucha]] {{f}}, [[pelea]], [[riña]]
+*Telugu: [[కొట్లాట]] (koTlaaTa), [[పోరాటం]] (pOraaTaM)
 {{bottom}}
 
 ===Verb===
