robot  Adding: [[hu:fought]] <fought#984678>

--- a/en/f/fought.6880.wikitext
+++ b/en/f/fought.6880.wikitext
@@ -30,3 +30,4 @@
 *[[Japanese]]: [[戦った]] / [[闘った]] ([[たたかった]], tatakatta), [[対決]] ([[たいけつ]]した, taiketsu-shita), [[喧嘩]]した ([[けんか]]した, kenka-shita)
 
 [[it:fought]]
+[[hu:fought]]
