/* Translations */ da <speak#993846>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -38,6 +38,7 @@
 *[[Catalan]]: [[parlar]]
 *Chinese: [[说]]/[[説]] (shuō), [[说话]]/[[説話]] (shuōhuà)
 *Czech: [[mluvit]]
+*Danish: [[tale]] (1, 2, 3, 4, 5, 6, 7)
 *Dutch: [[spreken]]
 *Esperanto: [[paroli]]
 *Estonian: [[rääkima]]
@@ -46,11 +47,11 @@
 *German: [[sprechen]]
 *[[Guaraní]]: [[ñe'ẽ]]
 *Hebrew: [[לדבר]] /ledabe'r/
-{{mid}}
 *Hungarian: [[beszélni]]
 *Indonesian: [[bicara|berbicara]], [[pidato|berpidato]]
 *[[Interlingua]]: [[parlar]]
 *Italian: [[parlare]]
+{{mid}}
 *Japanese: [[話す]] ([[はなす]], hanasu)
 *Latin: [[dicere]]
 *Portuguese: [[falar]]
