--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -39,7 +39,7 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 *Italian: [[sostanza]] {{f}}
 *Japanese: [[実体]] ([[じったい]]) (jittai), [[物質]] (ぶっしつ, busshitsu)
 {{mid}}
-*Korean: [[물질]] (muljil)
+*Korean: [[실체]] (silche), [[물질]] (muljil)
 *Latvian: [[viela]]
 *Lithuanian: [[turinys]]
 *Norwegian: [[substans]]
