cat switch <jeudi#1002752>

--- a/en/j/jeudi.1517.wikitext
+++ b/en/j/jeudi.1517.wikitext
@@ -6,7 +6,8 @@
 
 ===Saying===
 :''la semaine des quatre jeudis'' : never
-[[Category:French days of the week]]
+
+[[Category:fr:Days of the week]]
 
 [[de:jeudi]]
 [[et:jeudi]]
