--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -16,6 +16,7 @@
 *Indonesian: [[mantel]]
 *Italian: [[mantello]] ''m''
 {{mid}}
+*Portuguese: [[casaco]] ''m''
 *Slovene: [[plašč]] ''m''
 *Spanish: [[abrigo]] ''m'', [[saco]] ''m'', [[casaca]] ''f''
 *Swedish: [[rock#Swedish|rock]] ''c''
