/* Translations */ te <tortoise#1008097>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -35,6 +35,7 @@
 *Somali: [[diin]]
 *Spanish: [[tortuga]] ''f''
 *Swedish: [[sköldpadda]] [[:sv:sköldpadda|º]]
+*Telugu: [[తాబేలు]] (taabealu)
 {{bottom}}
 
 ===See also===
