--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -9,7 +9,7 @@
 #the saffron crocus plant, ''Crocus sativus''.
 #(herb) A [[seasoning]] made from the [[stigma]]ta of the saffron plant.
 #A [[dye]] made from the [[stigma]]ta of the saffron plant.
-#(colour) An [[orange]]-[[yellow]] [[color|colour]].
+#(colour) An [[orange]]-[[yellow]] [[color|colour]]. The color of a lion.
 #:<table><tr><td>saffron colour: &nbsp;</td><td bgcolor="#F4C430" width="80">&nbsp; </td></tr></table>
 
 ====Synonyms====
