--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -24,7 +24,7 @@
 *Japanese: [[サフラン]] (safuran)
 *Polish: [[szafran]] ''m'', [[krokus]] ''m''
 {{mid}}
-*Sanskrit: [[kesar]]
+*Sanskrit: [[केसर]][[kesar]]
 *Swedish: [[saffran]]
 {{bottom}}
 
@@ -36,9 +36,10 @@
 *Japanese: [[サフラン]] (safuran)
 *Polish: [[szafran]] ''m''
 {{mid}}
+
 *Swedish: [[saffran]]
 {{bottom}}
-
+*Sanskrit: [[केसर]][[kesar]]
 '''dye'''
 {{top}}
 *Polish: [[szafran]] ''m''
