Robot: Automated text replacement  (-{{janoun\|(\[\[)?(.*?)(]])?\|(\[\[)?(.*?)(]])?}} +{{janoun|\2|\5}}) <傘#1010011>

--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -37,7 +37,7 @@
 ==Japanese==
 [[Category:Japanese language|かさ]]
 ===Noun===
-{{janoun|[[かさ]]|[[kasa]]}}
+{{janoun|かさ|kasa}}
 # [[umbrella]], [[parasol]]
 #*傘を[[差す]] 
 #*:かさをさす
