--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -1,10 +1,10 @@
 {{wikipedia}}
 ==English==
-
 ===Pronuciation===
 *{{IPA|/ˈbʌ.tɝ/}}
 *:{{audio|en-us-butter.ogg|Audio (US)}}
-
+===Etymology===
+Old English ''butere'', ultimately from Latin ''[[butyrum]]''
 ===Noun===
 '''but•ter'''
 
