--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -22,6 +22,7 @@ Old English ''butere'', ultimately from Latin ''[[butyrum]]''
 *Czech: [[máslo]]  {{n}}
 *Danish: [[smør]]
 *Dutch: [[boter]] {{f}}
+*Esperanto: [[butero]]
 *Finnish: [[voi]]
 *French: [[beurre]] {{m}}
 *German: [[Butter]] {{f}}
