--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -34,6 +34,7 @@
 *Czech: [[most#Czech|most]]
 *Danish: [[bro]] {{c}}
 *Dutch: [[brug]]
+*Esperanto: [[ponto]]
 *Estonian: [[sild]]
 *Finnish: [[silta]]
 *French: [[pont]] {{m}}
