--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -7,13 +7,17 @@
 {{irregverb|cling|[[clings]]|[[clung]]|[[clung]]|[[clinging]]}}
 # to [[hold]] very [[tight]]ly, as to not fall off
 
-=== Translations ===
+==== Translations ====
 {{top}}
 *Dutch: [[klampen]]
 *Indonesian: [[sangkut|menyangkut]], [[sangkut|menyangkutkan]], [[gantung|bergantung]], [[gantung|menggantung]], [[gantung|menggantungkan]]
 {{mid}}
+*{{it}}: [[aggrapparsi]] <ref>''Oxford-Paravia Concise - Dizionario Inglese-Italiano e Italiano-Inglese (in collaborazione con Oxford University Press)''. Edited by Maria Cristina Bareggi. Torino: Paravia, 2003. [[W:Wikipedia:book sources| ISBN 8839551107]]. Online version [http://www.oxfordparavia.it/ here]</ref>
 *Japanese:[[掛ける]] ([[かける]], kakeru), [[ぶら下がる]] ([[ぶらさがる]], burasagaru), [[ぶら下げる]] ([[ぶらさげる]], burasageru)
 {{bottom}}
+
+===References===
+<references/>
 
 [[et:cling]]
 [[ko:cling]]
