--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -16,9 +16,8 @@
 *Japanese:[[掛ける]] ([[かける]], kakeru), [[ぶら下がる]] ([[ぶらさがる]], burasagaru), [[ぶら下げる]] ([[ぶらさげる]], burasageru)
 {{bottom}}
 
-===References===
-<references/>
-
+===Derived terms===
+*[[cling film]] / [[clingfilm]]
 [[et:cling]]
 [[ko:cling]]
 [[pl:cling]]
