--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -54,6 +54,7 @@ Old English [[cuman]].
 *Old English: [[cuman]]
 *Persian: {{FAchar|[[امدن|آمَدَن]]}} (āmædæn)
 *Portuguese: [[vir]]
+*Pushto: [[راتلل]]
 *[[Rohingya]]: [[ai]]
 *Russian: [[приходить]] / [[прийти]] (prikhodít’, prijtí)
 *Slovene: [[priti]]
