add anagrams <came#1017865>

--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -18,6 +18,10 @@
 *[[German]]: [[kam]]
 *[[Indonesian]]: [[datang]], [[datang|mendatangi]], [[datang|mendatangkan]]
 *[[Japanese]]: [[来た]] ([[きた]], kita)
+
+===Anagrams===
+*[[mace]]
+
 [[Category:200 English basic words]]
 
 [[fr:came]]
