--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -100,6 +100,7 @@ Telugu: [[నెట్టు]] (neTTu), [[తోయు]] (tOyu)
 [[fr:push]]
 [[io:push]]
 [[it:push]]
+[[hu:push]]
 [[pt:push]]
 [[ru:push]]
 [[fi:push]]
