--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -20,6 +20,7 @@
 #: ''The LAN '''bridge''' uses a spanning tree algorithm.''
 #(''music'') A song contained within another song, often demarcated by meter, key, or melody.
 #: ''The lyrics in the song's '''bridge''' inverted its meaning.''
+#{{chemistry}} a [[valence bond]], [[atom]] or [[chain]] of atoms that [[connect]]s two different parts of a [[molecule]]; the atoms so connected being [[bridgehead]]s
 
 ====Translations====
 '''construction or natural feature that spans a divide'''
@@ -135,6 +136,11 @@
 {{top}}
 {{mid}}
 *Spanish: [[pasarela]] {{f}}
+{{bottom}}
+
+'''chemistry'''
+{{top}}
+{{mid}}
 {{bottom}}
 
 ====Derived terms====
